ya estoy terminando

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN</title>
-    <link rel="stylesheet" href=".css/estilos.css">
-    <link rel="stylesheet" href=".css/normalize.css">
+    <link rel="stylesheet" href="./login css/">
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="font.css">
     <link rel="stylesheet" href="main.css">
     <link rel="./pexels-elifskies-7799292.jpg" href="../Nueva carpeta/pexels-elifskies-7799292.jpg" type="image/x-icon">
