--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN</title>
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./login css/estilos.css">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="font.css">
     <link rel="stylesheet" href="main.css">
